# boxinginfo_crew

./: PyWhatKit_DB.txt  README.md  llama2.modelfile  mixtral.modelfile  pyproject.toml  report.md
knowledge/: user_preference.txt
src/ai_boxing/: crew.py  main.py
src/ai_boxing/config/: agents.yaml  tasks.yaml
src/ai_boxing/tools/: custom_tool.py
tests/: test_custom_tool.py
