[project]
name = "ai_boxing"
version = "0.1.0"
description = "ai_boxing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "langchain-community>=0.4",
    "pywhatkit>=5.4",
]

[project.scripts]
ai_boxing = "ai_boxing.main:run"
run_crew = "ai_boxing.main:run"
train = "ai_boxing.main:train"
replay = "ai_boxing.main:replay"
test = "ai_boxing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
